--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
 </div>
 <script>
-var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti"];
-var bannedusers = ["raef"];
+var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti", "hacker:password"];
+var bannedusers = ["hacker"];
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
