--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
  <a href="#HCB_comment_box"><button class="base btn2">Click here to scroll down to the comments!</button></a><br><br>
 <div id="news" style="border: 4px solid;border-radius: 8px;">
  <h3>Latest updates/news</h3>
+ <p>May 12th, 2017: Added BANNING and IP BANNING, you will get banned if you spam!</p>
  <p>May 11th, 2017: You now don't need to sign in everytime you refresh the page.</p>
  <p>May 11th, 2017: Major updates, added login system.</p>
  <p>May 11th, 2017: Removed CAPTCHA.</p>
