--- a/index.html
+++ b/index.html
@@ -24,23 +24,12 @@
  <h1 id="hello">Hello!</h1>
  <a href="#HCB_comment_box"><button class="base btn2">Click here to scroll down to the comments!</button></a><br><br>
 <div id="news" style="border: 4px solid;border-radius: 8px;">
- <h3>Latest updates/news</h3>
- <p>May 12th, 2017: We got the domain <b><a href="http://timedia.tk">timedia.tk</a></b>!</p>
- <p>May 12th, 2017: Added BANNING and IP BANNING, you will get banned if you spam!</p>
- <p>May 11th, 2017: You now don't need to sign in everytime you refresh the page.</p>
- <p>May 11th, 2017: Major updates, added login system.</p>
- <p>May 11th, 2017: Removed CAPTCHA.</p>
- <p>May 10th, 2017: Added CAPTCHA.</p>
+ <h3>Contact Us</h3><!-- start Contact Box -->
+<script data-sil-id='59164316a43fd60015db2993'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/contact/59164316a43fd60015db2993?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-contact sil-widget' id='sil-widget-59164316a43fd60015db2993'<a href='https://htmlcontactbox.com'>Contact Box is loading...</a></div>
+<!-- end Contact Box -->
  </div><br><br>
-<div id="ad" style="border: 4px solid;border-radius: 8px;">
- <h3>Get the new CoffeeMedia extension for Chrome now!</h3>
- <p>• Fills out your name for you.</p>
- <p>• Fills out the math problem for you.</p>
- <p>• Easy to install.</p>
- <p>Click <a href="https://mediafire.com/file/duljwzbj5hnh4d6/CoffeeMedia_.zip"><b>here</b></a> to download!</p><br>
- </div><br>
- <h3>This is a TI forum, not social media</h3>
- <h3>For social media (and non TI related disscussions), visit CoffeeMedia! (The admins regularly post there too!)</h3><br>
+ <h4>This is a TI forum, not social media</h4>
+ <h4>For social media (and non TI related disscussions), visit CoffeeMedia! (The admins regularly post there too!)</h4><br>
  <a href="https://coffee-media.github.io/net/"><button class="base btn2">Click here to visit CoffeeMedia!</button></a><br><br>
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <img width=75px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
