--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/G/01/aplusautomation/vendorimages/0e74993e-8b04-4f99-a980-2437ad5c0728.jpg._CB283769908__SR150,300_.jpg">
  <img width=200px src="http://i258.photobucket.com/albums/hh259/kaspernova/84PCS-Pink.jpg">
  <img width=100px src="https://upload.wikimedia.org/wikipedia/commons/8/89/PLT-SHH1.jpg">
- <img width=100px src="http://www.datamath.org/Graphing/Images/TI-85_I1092.jpg">
+ <img width=100px src="http://tiplanet.org/forum/gallery/image.php?album_id=15&image_id=273&view=no_count">
  <h4></h4>
 <!-- start Feedback -->
 <script data-sil-id='591367bea43fd60015db241c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/feedback/591367bea43fd60015db241c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-feedback sil-widget' id='sil-widget-591367bea43fd60015db241c'<a href='https://bawkbox.com/install/feedback'>Feedback is loading...</a></div>
