--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="content" style="visibility: hidden;">
  <h1 id="hello">Hello!</h1>
  <p>This is a TI forum, not social media. For social media (and non TI related disscussions), visit 
-  <a href="coffee-media.github.io/net">CoffeeMedia!</a>
+  <a href="http://www.coffee-media.github.io/net">CoffeeMedia!</a>
   <h3>(The admins regularly post there too!)</h3>
  <img width=175px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <img width=85px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
