--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
  <br>
 <div id="content" style="visibility: hidden;">
  <h1 id="hello">Hello!</h1>
- <p>This is a TI forum, not social media. For social media (and non TI related disscussions), visit 
-  <a href="http://coffee-media.github.io/net">CoffeeMedia!</a>
-  <h4>(The admins regularly post there too!)</h4>
+ <p>This is a TI forum, not social media. For social media (and non TI related disscussions), visit <a href="http://coffee-media.github.io/net">CoffeeMedia!</a>(The admins regularly post there too!)</p><br>
  <img width=175px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <img width=85px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
  <img width=150px src="https://images-na.ssl-images-amazon.com/images/I/A1p6HHnJWaL._SX466_.jpg">
