--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  </div><br>
 <div style="visibility:hidden;" id="ban">
  <h3>You are banned from TiMedia</h3>
- <p>If you would like to appeal, post why on CoffeeMedia.</p>
+ <p><b>raef</b> has banned you from TiMedia!</p>
  </div>
  <br>
 <div id="content" style="visibility: hidden;">
@@ -47,7 +47,7 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti"];
-var bannedusers = [""];
+var bannedusers = ["hymenopus"];
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
