--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti"];
-var bannedusers = ["hymenopus"];
+var bannedusers = ["hymenopus", "henry", "neil"];
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
