--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  </div><br>
 <div style="visibility:hidden;" id="ban">
  <h3>You are banned from TiMedia</h3>
- <p><b>raef</b> has banned you from TiMedia!</p>
+ <p>An admin has banned you from TiMedia!</p>
  </div>
  <br>
 <div id="content" style="visibility: hidden;">
