--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@ function check() {
 function checkPass() {
  if (contains(logins,document.getElementById('username').value + ':' + document.getElementById('password').value)) {
           if (contains(bannedusers,document.getElementById('username').value)) {
+                       var i = 0;
+            while (!logins[i] == document.getElementById('username').value + ":" + document.getElementById('password').value) {
+                  i++;
+              }
                  document.getElementById('reason').innerHTML = "Reason: " + banreason[i];
                  document.getElementById('ban').style = "visibility: block;";
                  document.getElementById('access').remove();
@@ -116,6 +120,10 @@ function checkPass() {
 
  if (getCookie("login") == "true") {
           if (contains(bannedusers,getCookie("name"))) {
+                       var i = 0;
+            while (!logins[i] == document.getElementById('username').value + ":" + document.getElementById('password').value) {
+                  i++;
+              }
                  document.getElementById('reason').innerHTML = "Reason: " + banreason[i];
                  document.getElementById('ban').style = "visibility: block;";
                  document.getElementById('access').remove();
