--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </div>
 <script>
-var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti"];
+var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty"];
 var bannedusers = ["henry"];
 var banreason = ["", "Spamming.", "", "", "", ""]
 var whobanned = ["", "jellyfishguy", "", "", "", ""]
