--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty"];
 var bannedusers = ["henry"];
-var banreason = ["", "Spamming.", "", "", "", ""]
-var whobanned = ["", "jellyfishguy", "", "", "", ""]
+var banreason = ["", "Spamming.", "", "Saying 'casio'.", "", ""]
+var whobanned = ["", "jellyfishguy", "", "jellyfishguy", "", ""]
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
