--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <p>Don't have a login? Request one <a href="https://coffee-media.github.io/net"><b>here.</b></a>
  </div><br>
 <div style="visibility:hidden;" id="ban">
- <h3>You are banned from TiMedia</h3>
+ <h3>You are banned from TiMedia!</h3>
  <p id="whoban">An admin has banned you from TiMedia!</p>
  <p id="reason">Reason: No reason</p>
  </div>
