--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty"];
-var bannedusers = ["henry"];
-var banreason = ["", "Spamming.", "", "Saying 'casio'.", "", ""]
+var bannedusers = ["hymenopus"];
+var banreason = ["Saying 'casio'!<br><img src='http://i.imgur.com/xrSWRhz.png'>", "Spamming.", "", "'.", "", ""]
 var whobanned = ["", "jellyfishguy", "", "jellyfishguy", "", ""]
  
  Element.prototype.remove = function() {
