--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty"];
 var bannedusers = ["hymenopus"];
 var banreason = ["Saying 'casio'!<br><img src='http://i.imgur.com/xrSWRhz.png'>", "Spamming.", "", "'.", "", ""]
-var whobanned = ["", "jellyfishguy", "", "jellyfishguy", "", ""]
+var whobanned = ["ABS (automatic ban system)", "jellyfishguy", "", "jellyfishguy", "", ""]
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
