--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty"];
 var bannedusers = ["hymenopus"];
-var banreason = ["Saying 'casio'!<br><img src='http://i.imgur.com/xrSWRhz.png'>", "Spamming.", "", "'.", "", ""]
+var banreason = ["Saying 'casio'!<br><img width=100px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming.", "", "'.", "", ""]
 var whobanned = ["ABS (automatic ban system)", "jellyfishguy", "", "jellyfishguy", "", ""]
  
  Element.prototype.remove = function() {
