--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty"];
 var bannedusers = ["hymenopus"];
-var banreason = ["Saying 'casio'!<br><img width=100px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming.", "", "'.", "", ""]
-var whobanned = ["ABS (automatic ban system)", "jellyfishguy", "", "jellyfishguy", "", ""]
+var banreason = ["Saying 'casio'!<br><img width=450px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming.", "", "'.", "", ""]
+var whobanned = ["jellyfishguy", "jellyfishguy", "", "jellyfishguy", "", ""]
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
