--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
  <h3>You are banned from TiMedia!</h3>
  <p id="whoban">An admin has banned you from TiMedia!</p>
  <p id="reason">Reason: No reason</p>
+ <p>Unfair ban? Appeal on <a href="https://coffee-media.github.io/net">CoffeeMedia</a>!</p>
  </div>
  <br>
 <div id="content" style="visibility: hidden;">
