--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty"];
-var bannedusers = ["hymenopus"];
-var banreason = ["Saying 'casio'!<br><img width=450px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming.", "", "'.", "", ""]
+var bannedusers = ["hymenopus", "henry"];
+var banreason = ["Saying 'casio'!<br><img width=450px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming/compromised account.", "", "'.", "", ""]
 var whobanned = ["jellyfishguy", "jellyfishguy", "", "jellyfishguy", "", ""]
  
  Element.prototype.remove = function() {
