--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 </div>
 <script>
-var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty"];
+var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti"];
 var bannedusers = ["hymenopus", "henry"];
 var banreason = ["Saying 'casio'!<br><img width=450px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming/compromised account.", "", "'.", "", ""]
 var whobanned = ["jellyfishguy", "jellyfishguy", "", "jellyfishguy", "", ""]
