--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti"];
-var bannedusers = ["hymenopus", "henry"];
-var banreason = ["Saying 'casio'!<br><img width=450px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming/compromised account.", "", "'.", "", ""]
-var whobanned = ["jellyfishguy", "jellyfishguy", "", "jellyfishguy", "", ""]
+var bannedusers = ["hymenopus", "henry", "raef"];
+var banreason = ["Saying 'casio'!<br><img width=450px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming/compromised account.", "", "'.", "", "Spamming."]
+var whobanned = ["jellyfishguy", "jellyfishguy", "", "jellyfishguy", "", "ABS (automatic ban system)"]
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
