--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti"];
-var bannedusers = ["hymenopus", "henry", "raef"];
+var bannedusers = ["henry", "raef"];
 var banreason = ["Saying 'casio'!<br><img width=450px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming/compromised account.", "", "'.", "", "Spamming."]
 var whobanned = ["jellyfishguy", "jellyfishguy", "", "jellyfishguy", "", "ABS (automatic ban system)"]
  
