--- a/index.html
+++ b/index.html
@@ -93,13 +93,6 @@ function contains(a, obj) {
     return false;
 }
  
-function check() {
- if (document.getElementById('answer').value == "1/3[ln(3)+ln(v)-ln(4)-ln(pi)]") {
-   document.getElementById('access').style = "visibility: hidden;";
-   document.getElementById('content').style = "visibility: block;";
- }
-}
- 
 function checkPass() {
  if (contains(logins,document.getElementById('username').value + ':' + document.getElementById('password').value)) {
           if (contains(bannedusers,document.getElementById('username').value)) {
@@ -113,9 +106,9 @@ function checkPass() {
                  document.getElementById('access').remove();
            } else {
             if (contains(warnedusers,getCookie("name"))) {
+             var i = 0;
                while (logins[i] !== document.getElementById('username').value + ":" + document.getElementById('password').value) {
                   i++;
-              }
              alert(warntext[i]);
               } else {
                  document.getElementById('access').remove();
@@ -129,7 +122,7 @@ function checkPass() {
 }
 
  if (getCookie("login") == "true") {
-          if (contains(warnedusers,getCookie("name"))) {
+          if (contains(bannedusers,getCookie("name"))) {
                        var i = 0;
             while (logins[i] !== document.getElementById('username').value + ":" + document.getElementById('password').value) {
                   i++;
@@ -139,10 +132,10 @@ function checkPass() {
                  document.getElementById('ban').style = "visibility: block;";
                  document.getElementById('access').remove();
            } else {
-            if (contains(bannedusers,getCookie("name"))) {
+            if (contains(warnedusers,getCookie("name"))) {
+                       var i = 0;
                while (logins[i] !== document.getElementById('username').value + ":" + document.getElementById('password').value) {
                   i++;
-              }
              alert(warntext[i]);
             } else {
                  document.getElementById('access').remove();
