--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti"];
 var bannedusers = ["henry", "raef"];
-var banreason = ["Compromised account.", "Spamming/compromised account.", "", "'.", "", "Spamming."]
+var banreason = ["Saying 'casio'!<br><img width=450px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming/compromised account.", "", "'.", "", "Spamming."]
 var whobanned = ["jellyfishguy", "jellyfishguy", "", "jellyfishguy", "", "ABS (automatic ban system)"]
-var warnedusers = ["hymenopus"]
-var warntext = ["We've recently noticed that you've said 'casio' on CoffeeMedia. This is just a warning letting you know. If you recieve another warning, you will be banned."]
-
+ 
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
 }
@@ -93,6 +91,13 @@ function contains(a, obj) {
     return false;
 }
  
+function check() {
+ if (document.getElementById('answer').value == "1/3[ln(3)+ln(v)-ln(4)-ln(pi)]") {
+   document.getElementById('access').style = "visibility: hidden;";
+   document.getElementById('content').style = "visibility: block;";
+ }
+}
+ 
 function checkPass() {
  if (contains(logins,document.getElementById('username').value + ':' + document.getElementById('password').value)) {
           if (contains(bannedusers,document.getElementById('username').value)) {
@@ -105,22 +110,17 @@ function checkPass() {
                  document.getElementById('ban').style = "visibility: block;";
                  document.getElementById('access').remove();
            } else {
-            if (contains(warnedusers,getCookie("name"))) {
-             var i = 0;
-               while (logins[i] !== document.getElementById('username').value + ":" + document.getElementById('password').value) {
-                  i++;
-             alert(warntext[i]);
-              } else {
+                 document.cookie = "login=true";
+                 document.cookie = "name=" + document.getElementById('username').value;
                  document.getElementById('access').remove();
                  document.getElementById('ban').remove();
-                 document.getElementById('content').style = "visibility: block;";
                  document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
-              }
+                 document.getElementById('content').style = "visibility: block;";
+           }
            } else {
   alert("Username or password is incorrect.");
  }
 }
-
  if (getCookie("login") == "true") {
           if (contains(bannedusers,getCookie("name"))) {
                        var i = 0;
@@ -132,17 +132,10 @@ function checkPass() {
                  document.getElementById('ban').style = "visibility: block;";
                  document.getElementById('access').remove();
            } else {
-            if (contains(warnedusers,getCookie("name"))) {
-                       var i = 0;
-               while (logins[i] !== document.getElementById('username').value + ":" + document.getElementById('password').value) {
-                  i++;
-             alert(warntext[i]);
-            } else {
                  document.getElementById('access').remove();
                  document.getElementById('ban').remove();
                  document.getElementById('content').style = "visibility: block;";
                  document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
-              }
            }
  }
  </script>
