--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti"];
-var bannedusers = [];
-var banreason = ["Saying 'casio'!<br><img width=450px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming/compromised account.", "", "'.", "", "Spamming."];
-var whobanned = ["jellyfishguy", "jellyfishguy", "", "jellyfishguy", "", "ABS (automatic ban system)"];
-var mutedusers = ["henry"];
+var bannedusers = ["henry", "raef"];
+var banreason = ["Saying 'casio'!<br><img width=450px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming/compromised account.", "", "'.", "", "Spamming."]
+var whobanned = ["jellyfishguy", "jellyfishguy", "", "jellyfishguy", "", "ABS (automatic ban system)"]
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
@@ -112,9 +111,6 @@ function checkPass() {
                  document.getElementById('ban').style = "visibility: block;";
                  document.getElementById('access').remove();
            } else {
-                        if (contains(mutedusers,getCookie("name"))) {
-                    document.getElementById('HCB_comment_form_box').remove();
-                       }
                  document.cookie = "login=true";
                  document.cookie = "name=" + document.getElementById('username').value;
                  document.getElementById('access').remove();
@@ -137,9 +133,6 @@ function checkPass() {
                  document.getElementById('ban').style = "visibility: block;";
                  document.getElementById('access').remove();
            } else {
-                        if (contains(mutedusers,getCookie("name"))) {
-                    document.getElementById('HCB_comment_form_box').remove();
-                       }
                  document.getElementById('access').remove();
                  document.getElementById('ban').remove();
                  document.getElementById('content').style = "visibility: block;";
