--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- 1.2, B1 -->
 <html>
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -49,12 +50,18 @@
  </body>
 
 </div>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> <!-- jQuery -->
 <script>
-var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti"];
-var bannedusers = ["henry", "raef"];
-var banreason = ["Saying 'casio'!<br><img width=450px src='http://i.imgur.com/xrSWRhz.png'>", "Spamming/compromised account.", "", "'.", "", "Spamming."]
-var whobanned = ["jellyfishguy", "jellyfishguy", "", "jellyfishguy", "", "ABS (automatic ban system)"]
- 
+function checkLogin() {
+$.getJSON('http://limited.zone/login.php?username=' + document.getElementById('username').value + '&password=' + document.getElementById('password').value, function(data) {
+  if (data.access == "1") {
+     return true;
+  } else {
+     return false;
+  }
+});
+}
+
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
 }
@@ -66,78 +73,16 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     }
 }
  
- 
-function getCookie(cname) {
-    var name = cname + "=";
-    var decodedCookie = decodeURIComponent(document.cookie);
-    var ca = decodedCookie.split(';');
-    for(var i = 0; i <ca.length; i++) {
-        var c = ca[i];
-        while (c.charAt(0) == ' ') {
-            c = c.substring(1);
-        }
-        if (c.indexOf(name) == 0) {
-            return c.substring(name.length, c.length);
-        }
-    }
-    return "";
-}
- 
-function contains(a, obj) {
-  for (var i = 0; i < a.length; i++) {
-        if (a[i] === obj) {
-            return true;
-        }
-    }
-    return false;
-}
- 
-function check() {
- if (document.getElementById('answer').value == "1/3[ln(3)+ln(v)-ln(4)-ln(pi)]") {
-   document.getElementById('access').style = "visibility: hidden;";
-   document.getElementById('content').style = "visibility: block;";
- }
-}
- 
 function checkPass() {
- if (contains(logins,document.getElementById('username').value + ':' + document.getElementById('password').value)) {
-          if (contains(bannedusers,document.getElementById('username').value)) {
-                       var i = 0;
-            while (logins[i] !== document.getElementById('username').value + ":" + document.getElementById('password').value) {
-                  i++;
-              }
-                 document.getElementById('whoban').innerHTML = whobanned[i] + " has banned you from TiMedia!";
-                 document.getElementById('reason').innerHTML = "Reason: " + banreason[i];
-                 document.getElementById('ban').style = "visibility: block;";
-                 document.getElementById('access').remove();
-           } else {
-                 document.cookie = "login=true";
-                 document.cookie = "name=" + document.getElementById('username').value;
+  if (checkLogin()) {
+                 document.cookie = "name=" + document.getElementById('username');
                  document.getElementById('access').remove();
                  document.getElementById('ban').remove();
-                 document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
                  document.getElementById('content').style = "visibility: block;";
-           }
-           } else {
-  alert("Username or password is incorrect.");
- }
+                 document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
+  } else {
+   alert("Username or password is incorrect!");
+  }
 }
- if (getCookie("login") == "true") {
-          if (contains(bannedusers,getCookie("name"))) {
-                       var i = 0;
-            while (logins[i] !== document.getElementById('username').value + ":" + document.getElementById('password').value) {
-                  i++;
-              }
-                 document.getElementById('whoban').innerHTML = whobanned[i] + " has banned you from TiMedia!";
-                 document.getElementById('reason').innerHTML = "Reason: " + banreason[i];
-                 document.getElementById('ban').style = "visibility: block;";
-                 document.getElementById('access').remove();
-           } else {
-                 document.getElementById('access').remove();
-                 document.getElementById('ban').remove();
-                 document.getElementById('content').style = "visibility: block;";
-                 document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
-           }
- }
  </script>
 </html>
