--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <br><br>
 <div id="access">
  <h3>You need access to this page</h3>
+ <p><b>NOTE:</b> This is currently being fixed!</p>
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
  <button class="base btn" onclick="checkPass()">Login!</button>
