--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- 1.2, B1 -->
+<!-- v1.2, B2 -->
 <html>
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -11,7 +11,7 @@
 <br><br>
 <div id="access">
  <h3>You need access to this page</h3>
- <p><b>NOTE:</b> This is currently being fixed!</p>
+ <p><b>NOTE:</b> This is currently being fixed! (v1.2, B2)</p>
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
  <button class="base btn" onclick="checkPass()">Login!</button>
