--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <p>Unfair ban? Appeal on <a href="https://coffee-media.github.io/net">CoffeeMedia</a>!</p>
  </div>
  <br>
-<div id="content" style="visibility: block;">
+<div id="content" style="visibility: hidden;">
  <h1 id="hello">Hello!</h1>
  <p>This is a TI forum, not social media. For social media (and non TI related disscussions), visit <a href="http://coffee-media.github.io/net">CoffeeMedia!</a> (The admins regularly post there too!)</p>
  <p><b>Only official mods have "(mod)" at the end of their name! We now ban people who say "casio"!</b></p>
