--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
  </body>
 
 </div>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> <!-- jQuery -->
+<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script> <!-- jQuery -->
 <script>
 function checkLogin() {
 $.getJSON('http://limited.zone/login.php?username=' + document.getElementById('username').value + '&password=' + document.getElementById('password').value, function(data) {
