--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> <!-- jQuery -->
 <script>
 function checkLogin() {
-getJSON('http://limited.zone/login.php?username=' + document.getElementById('username').value + '&password=' + document.getElementById('password').value, function(data) {
+$getJSON('http://limited.zone/login.php?username=' + document.getElementById('username').value + '&password=' + document.getElementById('password').value, function(data) {
   if (data.access == "1") {
      return true;
   } else {
