--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <p><b>NOTE:</b> This is currently being fixed! (v1.2, B2)</p>
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
- <button class="base btn" onclick="checkPass()">Login!</button>
+ <button class="base btn" onclick=checkPass()>Login!</button>
  <p>Don't have a login? Request one <a href="https://coffee-media.github.io/net"><b>here.</b></a>
  </div><br>
 <div style="visibility:hidden;" id="ban">
