--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <p><b>NOTE:</b> This is currently being fixed! (v1.2, B2)</p>
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
- <button class="base btn" onclick= function checkPass()>Login!</button>
+ <button class="base btn" onclick="checkPass()">Login!</button>
  <p>Don't have a login? Request one <a href="https://coffee-media.github.io/net"><b>here.</b></a>
  </div><br>
 <div style="visibility:hidden;" id="ban">
@@ -54,15 +54,14 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> <!-- jQuery -->
 <script>
 function checkLogin() {
-jQuery.getJSON(http://limited.zone/login.php?username=' + document.getElementById('username').value + '&password=' + document.getElementById('password').value, function(data) {
-    if (data.access == "1") {
+jQuery.getJSON('http://limited.zone/login.php?username=' + document.getElementById('username').value + '&password=' + document.getElementById('password').value, function(data) {
+  if (data.access == "1") {
      return true;
   } else {
      return false;
   }
 });
 }
-
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
 }
