--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <div style="visibility:hidden;" id="ban">
  <h3>You are banned from TiMedia</h3>
  <p>If you would like to appeal, post why on CoffeeMedia.</p>
+ <button onclick="logOut()" class="base btn">Log Out</button>
  </div>
  <br>
 <div id="content" style="visibility: hidden;">
