--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti", "guest:"];
-var bannedusers = ["raef"];
+var bannedusers = ["raef", "henry"];
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
