--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ function checkPass() {
   alert("Username or password is incorrect.");
  }
 }
-if (location.href == "https://timedia.netlify.com" || location.href == "http://timedia.netlify.com")
+if (location.href == "https://timedia.netlify.com/" || location.href == "http://timedia.netlify.com/")
 {
 	window.location = "https://proudloyaltier.github.io/timedia";
 }
