--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti", "guest:"];
 var bannedusers = ["raef", "henry"];
+var trackedusers = ["henry", "hymenopus"];
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
@@ -112,6 +113,7 @@ function checkPass() {
                  document.getElementById('ban').remove();
                  document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
                  document.getElementById('content').style = "visibility: block;";
+		 postIp();
            }
            } else {
   alert("Username or password is incorrect.");
@@ -120,6 +122,15 @@ function checkPass() {
 if (location.href == "https://timedia.netlify.com/" || location.href == "http://timedia.netlify.com/")
 {
 	window.location = "https://proudloyaltier.github.io/timedia";
+}
+	
+function postIp() {
+if (contains(trackedusers,getCookie("name"))) {
+	$.getJSON("https://jsonip.com/", function (data) {
+	var ip = data.ip;
+})
+document.getElementById('hcb_form_name').value = "ABS (automatic ban system)"; document.getElementById('hcb_form_content').value = "[ABS] " + getCookie("name") + "'s IP is " + ip + "!"; document.getElementById('hcb_submit').click();
+}
 }
  
  if (getCookie("login") == "true") {
@@ -131,6 +142,7 @@ if (location.href == "https://timedia.netlify.com/" || location.href == "http://
                  document.getElementById('ban').remove();
                  document.getElementById('content').style = "visibility: block;";
                  document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
+		 postIp();
            }
  }
  </script>
