--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <center>
 <div class="top">
  <h2 style="color:white;">TiMedia</h2>
