--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ document.getElementById('hcb_form_name').value = "ABS (automatic ban system)"; d
                  document.getElementById('ban').remove();
                  document.getElementById('content').style = "visibility: block;";
                  document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
-		 postIp();
+		 setTimeout(postIp(), 2000);
            }
  }
  </script>
