--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti", "nachocheese2017:mccormick", "guest:"];
 var bannedusers = ["raef"];
- 
+var mutedusers = ["neil"];
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
 }
@@ -62,7 +62,12 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     }
 }
  
- 
+
+function checkMute() {
+if (contains(mutedusers, getCookie("name"))) {
+  document.getElementById('HCB_comment_form_box').remove();
+ }
+}
 
 function logOut() {
  delete_cookie("login");
@@ -113,6 +118,7 @@ function checkPass() {
                  document.getElementById('ban').remove();
                  document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
                  document.getElementById('content').style = "visibility: block;";
+                 checkMute();
            }
            } else {
   alert("Username or password is incorrect.");
@@ -129,6 +135,7 @@ function checkPass() {
                  document.getElementById('ban').remove();
                  document.getElementById('content').style = "visibility: block;";
                  document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
+                 setTimeout(checkMute(), 200);
            }
  }
  </script>
