--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <script data-sil-id='591367bea43fd60015db241c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/feedback/591367bea43fd60015db241c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-feedback sil-widget' id='sil-widget-591367bea43fd60015db241c'<a href='https://bawkbox.com/install/feedback'>Feedback is loading...</a></div>
 <!-- end Feedback -->
 
+ <p id="mutemessage"></p><br>
  <!-- begin comment box -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
@@ -66,6 +67,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 function checkMute() {
 if (contains(mutedusers, getCookie("name"))) {
   document.getElementById('HCB_comment_form_box').remove();
+  document.getElementById('mutemessage').innerHTML = "You are muted! You cannot post comments.";
  }
 }
 
