--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti", "nachocheese2017:mccormick", "guest:"];
 var bannedusers = ["raef"];
-var mutedusers = ["neil"];
+var mutedusers = ["hymenopus", "henry", "neil", "hayden"];
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
 }
