--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@ function contains(a, obj) {
  
  
 function checkCasioer() {
- if (document.getElementById('hcb_form_content').value.indexOf("casio") == 0 || document.getElementById('hcb_form_content').value.indexOf("Casio") == 0 || document.getElementById('hcb_form_content').value.indexOf("CASIO") == 0) {
+var comment = document.getElementById('hcb_form_content').value;
+ if (content.includes("casio") || content.includes("Casio") || content.includes("CASIO")) {
   document.cookie = "mute=true";
   alert("Don't say Casio! You've been muted!");
   checkMute();
