--- a/admin.html
+++ b/admin.html
@@ -41,4 +41,5 @@ if (contains(admins, getCookie("name"))) {
 } else {
   document.getElementById('admin').innerHTML = "You're not an admin!";
 }
+ </script>
 </html>
